--- a/angular/Angular/01-bases/src/app/components/footer/footer.component.css
+++ b/angular/Angular/01-bases/src/app/components/footer/footer.component.css
@@ -1,7 +1,6 @@
 .footer{
   max-height: 30%;
-  min-height: 10%;
-  position: fixed;
+  min-height: 15vh;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -11,5 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 5em;
 }
 
