--- a/angular/Angular/01-bases/src/app/components/landigPageHeader/landigPageHeader.component.css
+++ b/angular/Angular/01-bases/src/app/components/landigPageHeader/landigPageHeader.component.css
@@ -4,6 +4,11 @@ body, html {
 }
 
 /* HEADER */
+.container{
+    min-width: 100vw;
+    margin: 0;
+    padding: 0;
+}
 .hero-image {
     display: flex;
     flex-direction: column;
