--- a/angular/Angular/01-bases/src/app/components/navbar/navBar.component.css
+++ b/angular/Angular/01-bases/src/app/components/navbar/navBar.component.css
@@ -1,3 +1,4 @@
+/* Nav bar */
 .navbar{
   height:50px;
   background-color: #fff;
@@ -8,7 +9,7 @@
 
 /* Dropdown Button */
 .userbtn {
-    margin-right: 8em;
+    margin-right: 15em;
     fill: var(--color-primary);
     font-size: 0.1em;
     border: none;
@@ -17,16 +18,15 @@
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: fixed;
+    position: absolute;
     right: 0;
     display: inline-block;
   }
   
-  /* Dropdown Content (Hidden by Default) */
+  /* Dropdown */
   .dropdown-content {
     display:none;
-    position: fixed;
-    right: 0;
+    margin-top:100px;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
